Z-index fixed.

--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ nav {
   top: 0;
   background-color: transparent;
   transition: transform 0.5s ease-in-out;
-  z-index: 1000;
+  z-index: 50;
 }
 
 nav.hide-on-scroll {
